Release Notes
=============
Date:   05/09/2025
Name:   June
Release:
1. Reposition buttons: move import public holiday before generate timetable

Changes:
main.py
=============
Date:   04/09/2025
Name:   June
Release:
1. Added script to drop tables listed in db_setup.py so tables with updated schemas can be recreated
Run this script directly to drop tables

Changes:
windows\db_drop_tables.py
=============
Date:   04/09/2025
Name:   Kenneth Ng
Release:
1. Added basic prototype of calendar view
2. Added requirements.txt for mass installation of required libraries (run pip install -r requirements.txt --no-deps in cmd after changing to project directory)

Changes:
main.py
files\timetable.db
full_calendar_component\__init__.py
full_calendar_component\_imports_.py
calendar_view.py
full_calendar_component\FullCalendarComponent.py
requirements.txt
tests\test_usage.py

=============
Date:   03/09/2025
Name:   Jeremy
Release:
1. formatted scheduling instructions for each job

Changes:
main.py
=============
Date:   02/09/2025
Name:   June
Release:
1. Updated db tables
2. Updated logic to populate db - system code, db table changes
3. Added public holiday exclusion logic to timetable generation

Changes:
windows\db_setup.py
windows\populate_db_from_schedule.py
windows\timetable_exclude_ph.py
windows\timetable_generation.py
=============
Date:   30/08/2025
Name:   June
Release:
1. Updated import public holiday feature - message, console, layout

Changes:
windows\public_holiday.py
main.py
=============
Date:   28/08/2025 - 29/08/2025
Name:   Zhi Hui
Release:
1. weekly timetable data generation

Changes:
windows\timetable_weekly.py --> windows\timetable_generation.py
main.py
=============
Date:   27/08/2025
Name:   Jeremy
Release:
1. OS export draft

Changes:
main.py
=============
Date:   27/08/2025
Name:   Kenneth Ng
Release:
1. Updated Timetable DB to add TIMETABLE_DATETIME table
2. Updated DB Setup script to add TIMETABLE_DATETIME table creation

Changes:
windows\db_setup.py